import React from "react";
import {render} from "@testing-library/react";
import configureStore from "redux-mock-store";
import {Provider} from "react-redux";
import OfferCard from "./offer-card";

let mockStore;
let extendedOffer;
describe(`OfferCard should render correctly`, () => {
  beforeEach(() => {
    mockStore = configureStore({});
    extendedOffer = {
      "bedrooms": 3,
      "city": {
        "location": {
          "latitude": 52.370216,
          "longitude": 4.895168,
          "zoom": 10
        },
        "name": `Amsterdam`
      },
      "description": `A quiet cozy and picturesque that hides behind a a river by the unique lightness of Amsterdam.`,
      "goods": [`Heating`, `Kitchen`, `Cable TV`, `Washing machine`, `Coffee machine`],
      "host": {
        "avatar_url": `img/1.png`,
        "id": 3,
        "is_pro": true,
        "name": `Angelina`
      },
      "id": 1,
      "images": [`img/1.png`, `img/2.png`],
      "is_favorite": false,
      "is_premium": false,
      "location": {
        "latitude": 52.35514938496378,
        "longitude": 4.673877537499948,
        "zoom": 8
      },
      "max_adults": 4,
      "preview_image": `img/1.png`,
      "price": 120,
      "rating": 4.8,
      "title": `Beautiful & luxurious studio at great location`,
      "type": `apartment`
    };
  });
  it(`OfferCard should render correctly on Main page`, () => {
    const {container} = render(
        <Provider store={mockStore({})}>
          <OfferCard offer={extendedOffer} pageType="cities"/>
        </Provider>);
    expect(container).toMatchSnapshot();
  });

  it(`OfferCard should render correctly on Favorite page`, () => {
    const {container} = render(
        <Provider store={mockStore({})}>
          <OfferCard offer={extendedOffer} pageType="favorites"/>
        </Provider>);
    expect(container).toMatchSnapshot();
  });
});
