// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OfferCard should render correctly OfferCard should render correctly on Favorite page 1`] = `
<div>
  <article
    class="favorites__card place-card"
    id="1"
  >
    <div
      class="favorites__image-wrapper place-card__image-wrapper"
    >
      <a>
        <img
          alt="Place image"
          class="place-card__image"
          height="110"
          src="img/1.png"
          width="150"
        />
      </a>
    </div>
    <div
      class="place-card__info favorites__card-info"
    >
      <div
        class="place-card__price-wrapper"
      >
        <div
          class="place-card__price"
        >
          <b
            class="place-card__price-value"
          >
            €
            120
          </b>
          <span
            class="place-card__price-text"
          >
            / night
          </span>
        </div>
        <button
          class="place-card__bookmark-button button "
          type="button"
        >
          <svg
            class="place-card__bookmark-icon"
            height="19"
            width="18"
          >
            <use
              xlink:href="#icon-bookmark"
            />
          </svg>
          <span
            class="visually-hidden"
          >
            In bookmarks
          </span>
        </button>
      </div>
      <div
        class="place-card__rating rating"
      >
        <div
          class="place-card__stars rating__stars"
        >
          <span
            style="width: 100%;"
          />
          <span
            class="visually-hidden"
          >
            Rating
          </span>
        </div>
      </div>
      <h2
        class="place-card__name"
      >
        <a
          href="/offer/1"
        >
          Beautiful & luxurious studio at great location
        </a>
      </h2>
      <p
        class="place-card__type"
      >
        apartment
      </p>
    </div>
  </article>
</div>
`;

exports[`OfferCard should render correctly OfferCard should render correctly on Main page 1`] = `
<div>
  <article
    class="cities__place-card place-card"
    id="1"
  >
    <div
      class="cities__image-wrapper place-card__image-wrapper"
    >
      <a>
        <img
          alt="Place image"
          class="place-card__image"
          height="200"
          src="img/1.png"
          width="260"
        />
      </a>
    </div>
    <div
      class="place-card__info "
    >
      <div
        class="place-card__price-wrapper"
      >
        <div
          class="place-card__price"
        >
          <b
            class="place-card__price-value"
          >
            €
            120
          </b>
          <span
            class="place-card__price-text"
          >
            / night
          </span>
        </div>
        <button
          class="place-card__bookmark-button button "
          type="button"
        >
          <svg
            class="place-card__bookmark-icon"
            height="19"
            width="18"
          >
            <use
              xlink:href="#icon-bookmark"
            />
          </svg>
          <span
            class="visually-hidden"
          >
            In bookmarks
          </span>
        </button>
      </div>
      <div
        class="place-card__rating rating"
      >
        <div
          class="place-card__stars rating__stars"
        >
          <span
            style="width: 100%;"
          />
          <span
            class="visually-hidden"
          >
            Rating
          </span>
        </div>
      </div>
      <h2
        class="place-card__name"
      >
        <a
          href="/offer/1"
        >
          Beautiful & luxurious studio at great location
        </a>
      </h2>
      <p
        class="place-card__type"
      >
        apartment
      </p>
    </div>
  </article>
</div>
`;
